--- a/catlady/index.html
+++ b/catlady/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="A diversity site">
     <meta name="author" content="">
 
     <title>One Page Wonder - Start Bootstrap Template</title>
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">Catlady</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -61,11 +61,11 @@
     </nav>
 
     <!-- Full Width Image Header -->
-    <header class="header-image">
+    <header class="company-header">
         <div class="headline">
             <div class="container">
-                <h1>One Page Wonder</h1>
-                <h2>Will Knock Your Socks Off</h2>
+                <h1>Puppet Labs</h1>
+                <img src='images/companies/puppet-labs/logo.png' alt="Puppet Labs"> </img>
             </div>
         </div>
     </header>
@@ -77,10 +77,20 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">This First Heading
-                <span class="text-muted">Will Catch Your Eye</span>
+            <!-- Gauge forked from Jessica Eldredged http://codepen.io/jessabean/pen/pqejr-->
+            <div class="activity-gauge featurette-image pull-right">
+                <div class="levels">
+                    <span class="slice diverse"></span>
+                    <span class="slice homogenous"></span>
+                </div>
+                <div class="gauge-needle"></div>
+            </div>
+            <!-- End Gauge -->            
+            
+            <h2 class="featurette-heading">Diverse Workforce        
+                <span class="text-muted">Snazzy Graph</span>
             </h2>
+
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
 
